--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.database=mysql
 
 spring.datasource.url=jdbc:mysql://localhost/diary
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=9866309907
 
 spring.jpa.show-sql=true
 
