--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
+# Database configuration
 spring.jpa.database=mysql
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
-spring.datasource.url=jdbc:mysql://localhost/diary
-spring.datasource.username=root
-spring.datasource.password=9866309907
-
+# Hibernate configuration
+spring.jpa.hibernate.ddl-auto=update  # You can use 'update' for automatic schema updates
 spring.jpa.show-sql=true
 
-
+# JSP view configuration
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+
